# silent-phone-android

./: .android2po  .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .project  AndroidManifest.xml  BUILD.sh  LICENSE  Makefile  README.md  build.gradle  build.xml  buildNativeLibs.sh  build_ndk  format-source  project.properties  settings.gradle
silentphone2/support/axolotl/: .gitignore  CMakeLists.txt  Constants.h  Doxyfile  README.md  axolotl-build.sh
silentphone2/support/axolotl/android/: runndk.sh
silentphone2/support/axolotl/android/jni/: Android.mk  Application.mk
silentphone2/support/axolotl/appRepository/: AppRepository.cpp  AppRepository.h
silentphone2/support/axolotl/attachments/: CMakeLists.txt  javaApi.md  scloudPubTypes.h  utilities.cpp  utilities.h
silentphone2/support/axolotl/attachments/fileHandler/: scloud.cpp  scloud.h  scloudJson.cpp  scloudPriv.h
silentphone2/support/axolotl/axolotl/: AxoPreKeyConnector.cpp  AxoPreKeyConnector.h  AxoZrtpConnector.cpp  AxoZrtpConnector.h  Constants.h
silentphone2/support/axolotl/axolotl/crypto/: AesCbc.cpp  AesCbc.h  CMakeLists.txt  DhKeyPair.cpp  DhKeyPair.h  DhPrivateKey.h  DhPublicKey.h  Ec255PrivateKey.cpp  Ec255PrivateKey.h  Ec255PublicKey.cpp  Ec255PublicKey.h  EcCurve.cpp  EcCurve.h  EcCurveTypes.h  HKDF.cpp  HKDF.h
silentphone2/support/axolotl/axolotl/ratchet/: AxoRatchet.cpp  AxoRatchet.h
silentphone2/support/axolotl/axolotl/state/: AxoContact.h  (+2 more)
silentphone2/support/axolotl/dataRetention/: ScDataRetention.cpp  ScDataRetention.h
silentphone2/support/axolotl/doc/: ZinaDoxy.in
silentphone2/support/axolotl/interfaceApp/: AppInterface.h  AppInterfaceImpl.cpp  AppInterfaceImpl.h  GroupInterfaceImpl.cpp  GroupProtocol.pb.cc  GroupProtocol.pb.h  GroupProtocol.proto  GroupUpdateImpl.cpp  JsonStrings.h  MessageEnvelope.pb.cc  MessageEnvelope.pb.h  MessageEnvelope.proto  QueueHandling.cpp  ReceiveMessage.cpp  SendMessage.cpp
silentphone2/support/axolotl/interfaceTransport/: Transport.h
silentphone2/support/axolotl/keymanagment/: PreKeys.cpp  PreKeys.h
silentphone2/support/axolotl/logging/: AxoLogging.cpp  AxoLogging.h  Logger.cpp  Logger.h  ZinaLogging.cpp  ZinaLogging.h  logger_config.h  osSpecifics.h
silentphone2/support/axolotl/provisioning/: Provisioning.h  ScProvisioning.cpp  ScProvisioning.h
silentphone2/support/axolotl/ratchet/: ZinaPreKeyConnector.cpp  ZinaPreKeyConnector.h  ZinaZrtpConnector.cpp  ZinaZrtpConnector.h
silentphone2/support/axolotl/storage/: MessageCapture.cpp  MessageCapture.h  NameLookup.cpp  NameLookup.h
silentphone2/support/axolotl/unittests/: CMakeLists.txt  ChangesetRecvTests.cpp  ChangesetSendTests.cpp  CloudTester.java  HKDF_test.cpp  JavaTester.java  VersioningTests.cpp  appRepo.cpp  conversation.cpp  cryptoTests.cpp  interface.cpp  scloudTest.cpp  stagedKeyStore.cpp  storeTests.cpp  transportTest.cpp  zrtpRatchet.cpp
silentphone2/support/axolotl/util/: UUID.cpp  UUID.h  Utilities.cpp  Utilities.h  b64helper.cpp  b64helper.h  cJSON.c
silentphone2/support/axolotl/vectorclock/: VectorClock.h  VectorHelper.cpp  VectorHelper.h
silentphone2/support/silentphone/: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
silentphone2/support/silentphone/.build-release/: VoipPhone-test-entitlements  iosBuild.sh  manifest-enterprisephone.plist  manifest.plist
silentphone2/support/silentphone/audio/: CTAudioAndroid.h  CTAudioINSes.h  CTAudioInOutMacX.h  CTAudioIncDecFrq.h  CTAudioMacOSX_IOS.cpp  CTAudioMacOSX_IOS.h  CTAudioOutVOIP.h  CTAudioUtils.h  CTDtmfPlayer.h  CTJit.h  CTPhoneAudioIn.h  CTPhoneAuidoInNew.h  CTResampler.h  CTRtpQueue.h  CTUpsample2x.h  aa.cpp  android_audio.cpp  android_audio_rec.inl  audio_in_out_linux.cpp  iOS_audio_helper.mm
silentphone2/support/silentphone/baseclasses/: ADDR.h  CTBase.h  CTEditBase.cpp  CTEditBase.h  CTExpiresBase.h  CTIndexList.h  CTLabelBase.h  CTListBase.h
silentphone2/support/silentphone/codecs/: CCodecBase.h  CTImgData.h  CTVidCodec.h
silentphone2/support/silentphone/linux/: CMakeLists.txt
silentphone2/support/silentphone/os/: CTMutex.h  CTOsGui.h  CTSockNN.h  CTTcp.h  CTThread.h  CTiViSock.h  define_os.h  ios.mm  sys_utils.cpp
silentphone2/support/silentphone/rtp/: parseRTP.cpp  rtp.h
silentphone2/support/silentphone/sdp/: parseSDP.cpp  sdp.h
silentphone2/support/silentphone/stun/: CTStun.h
silentphone2/support/silentphone/tests/: alias.msg
silentphone2/support/silentphone/tiviandroid/: Country.txt  com_silentcircle_silentphone2_services_PhoneServiceNative.h  engcb.h  failed8k.raw  jni_glue2.cpp  phone_res.h  sc_logs.cpp  sc_logs.h  t_a_main.cpp
silentphone2/support/silentphone/tiviengine/: CMakeSipSdp.cpp  CPhone.cpp  CPhone.h  CSessions.cpp  CSessions.h  CTConference.h  CTEntropyCollector.h  CTLangStrings.cpp  CTLangStrings.h  CTPhMedia.h  CTPhMediaBase.h  CTRecentsItem.h  CTSipSock.cpp  CTSipSock.h  app_license.cpp  axolotl_glue.cpp  axolotl_glue.h  build_nr.cpp  digestmd5.cpp  digestmd5.h  g_cfg.cpp  lic_keys.cpp  main.h  media.cpp  password.cpp  prov.cpp  prov.orig.cpp  recents_save_load.cpp  release.cpp  sip_reason_translator.cpp  t_cfg.h  t_devID.cpp  t_devID.h  threads.cpp  tivi_log.cpp  tivi_log.h  userCfg.cpp
silentphone2/support/silentphone/tmr/: CTMRTunnel.cpp  CTMRTunnel.h  tmr_create_pack.h  tmr_parse.cpp  tmr_parse.h  tmr_split.h
silentphone2/support/silentphone/utils/: CTCoutryCode.cpp  CTDataBuf.h  CTFifo.h  CTNetwCheck.h  CTNumberHelper.h  CTTimer.h  CdtMacros.h  cfg_parser.h  sinX10000.h  t_msging.h  utils.cpp  utils.h  utils_audio.h  utils_chat.h  utils_make_dtmf.h  utils_ms_audio_noUI.cpp  utils_ms_audio_noUI.h  utils_tcp.cpp  utils_video.cpp
silentphone2/support/silentphone/video/: CTRTPVideoPlayer.cpp  CTRTPVideoPlayer.h  CTVideoInC.h  CTVideoInIOS.h  CTVideoInOutAndroid.h  CTVideoOutC.h  CTVideoOut_Quartz.h  CTVideo_c.cpp  CTVideo_dummy.cpp  QuartzVO.h  QuartzVO.mm  SqareCamViewController.mm  SquareCamViewController.h  video_interface_c.h  video_win_demo.cpp
silentphone2/support/silentphone/xml/: parse_xml.cpp  parse_xml.h
(+2189 files in other folders)
